--- a/index.html
+++ b/index.html
@@ -175,14 +175,10 @@
             <span class="education-date">September 2016 - July 2021</span>
             <h4>
                 Integrated Master in Electrical and Computer Engineering</h4>
-            <ul style="none">
-                <li> Field of study : Electrical and Computer Engineering</li>
-                <li>  Final grade: 7.99/10</li>
-                <li> Level in EQF: 7</li>
-                <li>  NQF Level : Integrated Master</li>
-                <li>  Type of credits: ECTS</li>
-                <li> Number of credits: 300</li>
-                <li> Thesis: Reuse Opportunities in JavaScript applications</li></ul>
+            <br>Field of study : Electrical and Computer Engineering
+            <br> Final grade: 7.99/10
+            <br>
+             Thesis: Reuse Opportunities in JavaScript applications<br>
             <ul style="none">
                    Main subject / occupational skills covered :
                     
@@ -213,28 +209,28 @@
                 
                 <!-- End .project -->
                 <div class="education-block">
-                        <h3>MUsing code from ChatGPT: Finding patterns in the developers’ interaction with ChatGPT</h3>
+                        <h3>Using code from ChatGPT: Finding patterns in the developers’ interaction with ChatGPT</h3><hr>
                         <p>
                         ChatGPT can advise developers and provide code on how to fix bugs, add new features, refactor, reuse, and secure their code but currently, there is little knowledge about whether the developers trust ChatGPT’s responses and actually use the provided code. In this context, this study aims to identify patterns that describe the interaction of developers with ChatGPT with respect to the char- acteristics of the prompts and the actual use of the provided code by the devel- oper. We performed a case study on 267,098 lines of code provided by ChatGPT related to commits, pull requests, files of code, and discussions between ChatGPT and developers. Our findings show that developers are more likely to integrate the given code snapshot in their code base when they have provided information to ChatGPT through several rounds of brief prompts that include problem-related specific words instead of using large textual or code prompts. Results also highlight the ability of ChatGPT to handle efficiently different types of problems across different programming languages.
                         </p>
                         <a href="#">ICSR 2024(to appear)</a>
                     </div>
                 <div class="education-block">
-                        <h3>Managing security vulnerabilities introduced by dependencies in React.JS JavaScript framework</h3>
+                        <h3>Managing security vulnerabilities introduced by dependencies in React.JS JavaScript framework</h3><hr>
                         <p>
                         Currently, the reuse of third-party packages is common practice when it comes to JavaScript (JS) application development. While software reuse brings numerous benefits contributing to accelerated development cycles, it also brings challenges associated with the security vulnerabilities introduced by third-party dependencies. These vulnerabilities have been studied mostly in the context of the hosting software ecosystem (i.e. npm package) while their impact on client applications is understudied. We believe that this impact should be carefully assessed by developers to be able to effectively manage the third-party dependency update process. Our primary objective in this study is to (a) investigate the most frequently appearing vulnerabilities introduced by third-party dependencies and their impact on the client application through a set of metrics, (b) examine the availability of patches/fixes released by the third-party packages to resolve the observed vulnerabilities and (c) examine whether the actual updates of third-party dependencies, performed in the client applications, are associated with the impact of the dependencies and the availability of updates. To achieve this, we conducted a case study on 5572 vulnerability reports obtained from React. js. Our results show that the update propagation of third-party dependencies in client applications is significantly associated both with the impact of the vulnerabilities introduced (i.e. severity, distribution, and volume) and with the availability of the fixes/ patches. To assist the decision-making process of third-party dependencies updates we propose a model that will help practitioners consider all related evidence.
                         </p>
                         <a href="#">SANER 2024(to appear)</a>
                     </div>
                 <div class="education-block">
-                        <h3>PEnhancing User Experience: Virtual Assistants in Greek University Helpdesk Service</h3>
+                        <h3>PEnhancing User Experience: Virtual Assistants in Greek University Helpdesk Service</h3><hr>
                         <p>
                         It is commonly accepted that we live in a digital era of constant changes. Digital revolution has brought significant changes in the way we live, work, and interact with each other, with messaging apps turning to the centerpiece of our communication. Individuals and especially youngsters are constantly connected through devices for both social and entertainment reasons. This growing enthusiasm for messaging apps brought the use of bots as supplementary virtual assistants into the spotlight. Examples of companies employing bots into their business chats examples marked that chatbots contribute to a better user experience while at the same time reduce personnel workload. The results raised the question whether the introduction of virtual assistants will benefit the everyday life of Greek Universities. To examine our hypothesis in the realms of University of Western Macedonia, we introduced the “bot-UoWM”, a zero- code conversational chatbot that supports Greek Natural Language, in well-known social media platforms. To evaluate the system, we conducted an empirical study using a questionnaire on 80 participants. The obtained survey data were analyzed using a combination of quantitative and qualitative techniques. The evaluation results show that our system improves user acceptance and understanding of the results. They also indicate that bots could help different users with their seeking tasks. Our results and discussions highlight the impact of using visual and interactive features as assistants for higher education.
                         </p>
                         <a href="https://dl.acm.org/doi/abs/10.1145/3635059.3635089">View Publication</a>
                     </div>
                 <div class="education-block">
-                                <h3>Software Reuse and Evolution in JavaScript Applications</h3>
+                                <h3>Software Reuse and Evolution in JavaScript Applications</h3><hr>
                                 <p>
                                 JavaScript (JS) is one of the most popular programming languages on GitHub. Most JavaScript applications are reusing third-party components to acquire various functionalities. Despite the benefits offered by software reuse there are still challenges, during the evolution of JavaScript applications, related to the management and maintenance of the third-party dependencies. Our key objective is to explore the evolution of library dependencies constraints in the context of JavaScript applications in terms of (a) the changeability (i.e., number of removed, added, or maintained libraries) (b) the update frequency of the library dependencies. For this purpose, we conducted a case study on the 86 most forked JavaScript applications hosted on GitHub and analyzed reuse data from a total of 2.363 successive releases. In general, 39% of the packages introduced in the first version of the project are being reused in the entire project’s lifetime. The number of package dependencies slightly grows over time, while several other are being permanently removed. Regarding the evolution of third-party applications, it is observed that developers do not update the dependencies constraints to a most recent version, waiting to reach probably “breaking points” when the updates will be inevitable.
                                 </p>
@@ -242,14 +238,14 @@
                             </div>
                 <div class="education-block">
                         <h3>
-                            Reuse Opportunities in JavaScript applications</h3>
+                            Reuse Opportunities in JavaScript applications</h3><hr>
                         <p>
                         JavaScript nowadays is among the most popular programming languages, used for developing web and IoT applications. Currently, the majority of JavaScript applications is reusing third-party components to acquire various functionalities. In this paper we isolate popular reused components and explore the type of functionality that is mostly being reused. Additionally, we examine whether the client applications adapt to the most recent versions of the reused components, and further study the reuse intensity of pairs of components that coexist in client applications. For this purpose, we performed a case study on 9389 components reused by 430 JavaScript applications hosted in GitHub. The results show that Compiler and Testing Frameworks are the most common types of functionality being reused, while the majority of client applications tend to adopt the recent versions of the reused components.
                         </p>
                         <a href="https://ieeexplore.ieee.org/abstract/document/9582564">View Publication</a>
                     </div>
                 <div class="education-block">
-                        <h3>Towards a Fully Open-Source System for Monitoring of Crops with UAVs in Precision Agriculture</h3>
+                        <h3>Towards a Fully Open-Source System for Monitoring of Crops with UAVs in Precision Agriculture</h3><hr>
                         <p>
                         UAVs offer an easy, fast and cost-effective way to acquire data for crop monitoring, alleviating most of the limitations of previously adopted methods. UAVs are frequently used the last years in Precision Agriculture applications as they are considered to be the future of remote sensing, and therefore it is a field that draws a lot of attention. Several software solutions have been developed for processing the images acquired from the UAVs to monitor the crops. However, most of these solutions are offered as commercial products, a fact that increases the already high cost of UAV-based Remote Sensing in Precision Agriculture. In this paper, we propose a fully open source software system that can be used to support the standard workflow required to process the data acquired from the UAVs.
                         </p>
